# kea_test_course

./: .gitignore  pyproject.toml
calculator_exercise_unit_tests/: EP_and_BV  calculator.py  test_calculator.py
employees_exercise/: employee.js  package-lock.json  package.json  test_employee.js
length_converter_exercise/: length_converter.py  test_length_converter.py
roman_numerals_exercise/: roman_numeral.py  test_roman_numeral.py
